--- a/src/pages/PaineisPage/MunicipioPainel.css
+++ b/src/pages/PaineisPage/MunicipioPainel.css
@@ -157,9 +157,9 @@
 
 .painel-text {
   flex: 1;
-  text-align: left; /* alinha textos à esquerda */
-  padding-left: 2cm; /* recuo solicitado */
-  margin-top: 48px; /* evita sobreposição com a bandeira central */
+  text-align: left;
+  padding-left: 0;
+  margin-top: 0;
 }
 
 .painel-text h1 {
